source/loadtest/security_group_stackset.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "Template for StackSet testing",
    "Resources": {
        "LoadTestingHostSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "virtual-waiting-room-loadtest",
                "GroupName": "virtual-waiting-room-loadtest",
                "SecurityGroupIngress": [
                    {
                        "FromPort": 8089,
                        "IpProtocol": "tcp",
                        "CidrIp": "0.0.0.0/0",
                        "ToPort": 8089
                    },
                    {
                        "FromPort": 5557,
                        "IpProtocol": "tcp",
                        "CidrIp": "0.0.0.0/0",
                        "ToPort": 5557
                    }
                ],  
                "Tags": [
                    {
                        "Key": "virtual-waiting-room-loadtest",
                        "Value": "true"
                    }
                ]
            }
        }
    }
}
